Fix minor message formatting and improve GUI readability

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -4,14 +4,14 @@
 }
 
 .label {
-    -fx-font-size: 12pt;
+    -fx-font-size: 13pt;
     -fx-font-family: "Helvetica";
     -fx-text-fill: #555555;
     -fx-opacity: 0.9;
 }
 
 .label-bright {
-    -fx-font-size: 12pt;
+    -fx-font-size: 13pt;
     -fx-font-family: "Helvetica";
     -fx-text-fill: white;
     -fx-opacity: 1;
@@ -25,7 +25,7 @@
 }
 
 .text-field {
-    -fx-font-size: 12pt;
+    -fx-font-size: 13pt;
     -fx-font-family: "Helvetica";
 }
 
@@ -110,7 +110,7 @@
 }
 
 .list-cell:filled:selected {
-    -fx-background-color: #98e4ff;
+    -fx-background-color: #a9c9ff;
 }
 
 .list-cell:filled:selected #cardPane {
@@ -346,10 +346,11 @@
 }
 
 #tagPane .label {
-    -fx-text-fill: #ffffff;
+    -fx-text-fill: #000000;
     -fx-background-color: #ffabde;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
-    -fx-font-size: 11;
+    -fx-font-weight: bold;
+    -fx-font-size: 12;
 }
